--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Note App test"
-            android:textColor="@color/black"
+            android:text="Note App"
+            android:textColor="@color/green"
             android:textSize="30sp"
             android:fontFamily="sans-serif-black"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="12dp"
+            />
 
     </LinearLayout>
     <androidx.cardview.widget.CardView
