--- a/app/src/main/res/layout/activity_notes_take.xml
+++ b/app/src/main/res/layout/activity_notes_take.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/black"
+    android:background="@color/white"
     tools:context=".NotesTakeActivity">
 
     <RelativeLayout
@@ -64,11 +64,11 @@
             android:textSize="20sp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/micButton"
+            android:layout_toStartOf="@+id/micbtn"
             android:layout_marginEnd="10dp"/>
 
         <ImageView
-            android:id="@+id/micButton"
+            android:id="@+id/micbtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
